// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateCostV1 > fixture: box perimeter 300x50, internal pitched roof, same geometry 1`] = `
{
  "cost_ex_gst": 15005.57,
  "cost_inc_gst": 17256.41,
  "notes_and_warnings": [],
  "warnings": [],
}
`;

exports[`calculateCostV1 > fixture: pitched, acrylic, 6m × 3m, black, soffit + deck posts, 2.4m 1`] = `
{
  "cost_ex_gst": 11568.37,
  "cost_inc_gst": 13303.63,
  "notes_and_warnings": [],
  "warnings": [],
}
`;
